# TheInfluencer

./: .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml
.cursor/rules/: core.mdc  dependencies.mdc  director.mdc  extractors.mdc  subsystems.mdc
autoedit/: __init__.py  cli.py  executor.py  ingest.py  renderer.py  review.py
autoedit/content/: __init__.py  extract.py
autoedit/director/: __init__.py  brief.py  cache.py  director.py  eval.py  heuristic.py  llm.py  openai_client.py  prompts.py  validate.py
autoedit/extractors/: __init__.py  _video.py  audio.py  framing.py  pacing.py  text.py
autoedit/models/: __init__.py  content_features.py  media_asset.py  plan.py  shot.py  style_profile.py  template.py  timeline.py
autoedit/renderer/: __init__.py  _fonts.py  audio.py  compose.py  overlays.py  plan.py  video.py
autoedit/style/: __init__.py  aggregate.py  (+1 more)
fixtures/: content_features.json  edit_plan.json  media_asset.json  shot.json  style_profile.json  timeline.json  video_features_fast_cuts.json  video_features_mixed.json  video_features_slow_static.json
tests/: conftest.py  test_aggregate.py  test_audio.py  test_brief.py  test_cache.py  test_captions.py  test_content_extract.py  test_content_features.py  test_director.py  test_end_to_end.py  test_eval.py  test_executor.py  test_filler.py  test_framing.py  test_ingest.py  test_matcher.py  test_media_asset.py  test_openai_client.py  test_pacing.py  test_plan.py  test_prompts.py  test_render_smoke.py  test_renderer.py  test_review.py  test_shot.py  test_style_profile.py  test_subsystems.py  test_templates.py  test_text.py  test_timeline.py
(+19 files in other folders)
